# backend/src/controllers/ordersController.js
@@ -3,6 +3,7 @@ import { ordersService } from '../services';
 export const ordersController = {
   async createNew(req, res, next) {
     const order = req.body;
+    order.customer = req.user.id;
     try {
       const data = await ordersService.createNew(order);
       res.status(201).json(data);
